
syntax = "proto3";

package aiserver.v1;

import "utils.proto";

// 因为还不能检测是否依赖这个 proto 文件，所以先手动 import 一下
import "google/protobuf/timestamp.proto";





message StreamAiPreviewsIntent {
  DocumentSymbolWithText main_symbols_to_analyze_from_go_to_def = 1;
  HoverDetails main_symbol_hover_details = 4;
  DocumentSymbolWithText related_symbols = 3;
  DocumentSymbolWithText main_symbols_to_analyze_from_implementations = 6;
  
}
  


message StreamAiPreviewsRequest {
  CurrentFileInfo current_file = 1;
  StreamAiPreviewsIntent intent = 2;
  ModelDetails model_details = 14;
  optional bool is_detailed = 15;
  
}
  


message StreamAiPreviewsResponse {
  string text = 1;
  
}
  

